<resources>
    <string name="app_name">Quản lý chi tiêu</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_toobar">Quản Lý Thu Chi</string>
    <string name="content">content</string>
    <string name="hint_txt_ghi_chu">Ghi chú</string>
    <string name="hint_txt_loai">Nhập khoản</string>
    <string name="text_btn_xong">Xong</string>
    <string name="text_btn_huy">Hủy</string>
    <string name="text_btn_ghi">Ghi</string>
    <string name="text_btn_sua">Edit</string>
    <string name="text_btn_themhinhanh">Thêm hình ảnh</string>
    <string name="txt_ngaythang">Ngày tháng</string>
    <string name="txt_ghi_chu">Ghi Chú</string>
    <string name="txt_mucchi">Tên</string>
    <string name="txt_loai">Loại</string>
    <string name="hint_so_tien">Số tiền</string>
    <string name="Thu">Thu</string>
    <string name="Chi">Chi</string>
    <string name="_200000">200000</string>

    <string name="gioithieu">* Giới thiệu</string>
    <string name="tenphanmem">Tên phần mềm:</string>
    <string name="ngaytao">Ngày tạo:</string>
    <string name="phienban">Phiên bản:</string>
    <string name="tacgia">Tác giả:</string>
    <string name="ngagtao">02/3/2017</string>
    <string name="v1_0">v1.0</string>
    <string name="tranhuu">Trần Văn Hữu</string>
    <string name="lienhe">* Liên hệ</string>
    <string name="caidat">Cài đặt</string>
    <string name="chi">Chi</string>
    <string name="haicham">:</string>
    <string name="dicho">Đi chợ</string>
    <string name="note">Ghi chú: Mua thức ăn rằm</string>
    <string name="vnd">VND</string>
    <string name="sua">Sửa</string>

    <string-array name="chonloai">
        <item>Thu</item>
        <item>Chi</item>
    </string-array>
</resources>
