<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_txt_ghi_chu">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_ghichudialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="4"
                android:maxLines="5"
                android:scrollbars="vertical" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_xong"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/TextInputLayout"
            android:layout_toStartOf="@+id/btn_huy"
            android:text="@string/text_btn_xong"
            android:background="#45e1b2"
            android:textColor="#FFF"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:layout_marginBottom="20dp"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_huy"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/TextInputLayout"
            android:layout_alignParentEnd="true"
            android:text="@string/text_btn_huy"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:background="#45e1b2"
            android:textColor="#FFF"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:layout_marginBottom="10dp"/>
    </RelativeLayout>
</ScrollView>