<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/margin_5dp"
    android:layout_marginStart="@dimen/margin_5dp">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edt_soTien"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="2dp"
        android:background="@drawable/custom_edittext"
        android:drawableEnd="@drawable/ic_c"
        android:ellipsize="end"
        android:gravity="end|center"
        android:hint="@string/hint_so_tien"
        android:inputType="number"
        android:maxLines="1"
        android:padding="10dp"
        android:textSize="18sp"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardChi"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_below="@+id/edt_soTien"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        app:cardElevation="4dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/txt_loai"
            android:textSize="14sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txt_loai"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="10dp"
            android:gravity="end"
            android:lines="1"
            android:text=""
            android:textSize="14sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_loai"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="end|center"
            android:src="@drawable/ic_next" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardThu"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_below="@+id/cardChi"
        android:layout_marginTop="1dp"
        android:padding="10dp"
        app:cardElevation="4dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/txt_mucchi"
            android:textSize="14sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txt_mucChi"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="10dp"
            android:gravity="end"
            android:lines="1"
            android:text=""
            android:textSize="14sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_mucChi"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="end|center"
            android:src="@drawable/ic_next" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card3"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_below="@+id/cardThu"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        app:cardElevation="4dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/txt_ghi_chu"
            android:textSize="14sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txt_ghiChu"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="10dp"
            android:gravity="end"
            android:lines="1"
            android:text=""
            android:textSize="14sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_ghiChu"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="end|center"
            android:src="@drawable/ic_next" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card4"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_below="@+id/card3"
        android:layout_marginTop="1dp"
        android:padding="10dp"
        app:cardElevation="4dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/txt_ngaythang"
            android:textSize="14sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txt_ngayThang"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="10dp"
            android:gravity="end"
            android:lines="1"
            android:text=""
            android:textSize="14sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_ngayThang"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="end|center"
            android:src="@drawable/ic_next" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card5"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_below="@+id/card4"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        app:cardElevation="4dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txt_hinhAnh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_btn_themhinhanh"
            android:textSize="14sp"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/img_anh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card5"
        android:layout_marginTop="5dp"
        android:maxHeight="230dp"
        android:padding="10dp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_ghi"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_below="@id/img_anh"
        android:layout_marginTop="5dp"
        android:background="#45e1b2"
        android:padding="10dp"
        android:text="@string/text_btn_ghi"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="18sp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_edit"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_below="@id/img_anh"
        android:layout_marginTop="5dp"
        android:background="#45e1b2"
        android:padding="10dp"
        android:text="@string/sua"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:visibility="gone" />
</RelativeLayout>